Add github link

--- a/TimeConverter/TimeConverter/Views/AboutPage.xaml
+++ b/TimeConverter/TimeConverter/Views/AboutPage.xaml
@@ -53,6 +53,9 @@
                                 <Span Text=" " />
                                 <Span Text="Xamarin Platform" FontAttributes="Bold" />
                                 <Span Text="." />
+                                <Span Text=" " />
+                                <Span Text="https://github.com/mfylypiuk/TimeConverter" />
+                                <Span Text=" " />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
